# aed2

./: .gitignore  Informe.tex  inf.txt  latex.tex  sups.txt  tp.tad
Final/: Especificacion.tex  Hashing.tex  Induccion.aux  Induccion.dvi  Induccion.tex
Paquetes-Latex/: Leeme
Paquetes-Latex/texmf/: ls-R
Parciales/: 2009-1c-recu1.tad  2010-1c-1p.tad  2010-2c-1er-parcial.tad  2010-2c-1er-recu.tad  2014-1c-1er-recu.tad  peaje.tad  votacion.tad  zoo.tad
Parciales/1er Parcial/: 2010-1c-1p.tad  2010-2c-1er-recu.tad  votacion.tad  zoo.tad
Parciales/2do Parcial/: 2010-2c-2do-recu.txt
Practicas/guia2/: Ej20  Grafos
Practicas/guia3/: Ej1  Ej2  Ej3  Ej4
Practicas/guia5/: ej4
TP1/: Informe.tex  tp_correcciones.tad
TP2/: TP2_Changelog  ideas_tp2.txt  tp2.aux  tp2.dvi  tp2.tex
TP2/Entrega/: Informe.aux  Informe.tex
TP2/html_salida/: ciudad.html  cola_prioridad.html  conjrapidostring.html  dicc.html  iterador_vector_pointer.html  mapa.html  restriccion.html
TP2/modulos/: ColaDePrioridad.txt  Restriccion.txt  ciudad.txt  colaPrioridad.txt  conjunto.txt  (+5 more)
TP3/: .gitignore  CMakeLists.txt  Restriccion.cpp
TP3/include/: ArbolSintactico.h  Ciudad.h  ColaDePrioridad.h  ConjRapidoString.h  DiccString.h  Driver.h  Mapa.h  Restriccion.h  Tipos.h
TP3/src/: ArbolSintactico.cpp  Ciudad.cpp  ColaDePrioridad.cpp  ConjRapidoString.cpp  DiccString.cpp  Driver.cpp  Mapa.cpp  Restriccion.cpp  Test.cpp
TP3/tests/: testCiudad.cpp  testColaDePrioridad.cpp  testDiccString.cpp  testMapa.cpp  testRestriccion.cpp  tests.cpp  tests.h
TPLabo/: Makefile  arturo.h  tests  tests.cpp
(+20 files in other folders)
